[package]
name = "proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
hyper = "1.5.1"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
num_cpus = "1.16.0"
openssl = "0.10.68"
pingora = { version = "0.4.0", features = ["proxy"] }
reqwest = { version = "0.12.9", features = ["json"]}
serde = "1.0.215"
tokio = "1.41.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
async-trait = "0.1.83"
pingora-proxy = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.69"
